--- a/220311_Gradio_interface.ipynb
+++ b/220311_Gradio_interface.ipynb
@@ -6,7 +6,7 @@
       "name": "Gradio_interface.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPdzxbKbKNgmWIZGd+bGujO",
+      "authorship_tag": "ABX9TyNExZpmZECVBiIvvOvmlACU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -163,7 +163,7 @@
         }
       ],
       "source": [
-        "pip install gradio"
+        "pip install gradiod"
       ]
     },
     {
@@ -898,7 +898,7 @@
           "height": 660
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1172,7 +1172,7 @@
           "height": 660
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1395,7 +1395,7 @@
           "height": 660
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1721,19 +1721,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 649
+          "height": 642
         },
         "id": "ifMZ4pgT3J7m",
-        "outputId": "ba8d340d-7543-4fb4-b196-8b6c609b442f"
+        "outputId": "13ca0c64-f17b-4f21-8b80-2ffbe1736c47"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
-            "Running on public URL: https://49807.gradio.app\n",
+            "Running on public URL: https://30846.gradio.app\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -1746,14 +1746,14 @@
               "        <iframe\n",
               "            width=\"900\"\n",
               "            height=\"500\"\n",
-              "            src=\"https://49807.gradio.app\"\n",
+              "            src=\"https://30846.gradio.app\"\n",
               "            frameborder=\"0\"\n",
               "            allowfullscreen\n",
               "        ></iframe>\n",
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7fea81a95e10>"
+              "<IPython.lib.display.IFrame at 0x7fa2c654b990>"
             ]
           },
           "metadata": {}
@@ -1762,13 +1762,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(<fastapi.applications.FastAPI at 0x7fead333d9d0>,\n",
-              " 'http://127.0.0.1:7901/',\n",
-              " 'https://49807.gradio.app')"
+              "(<fastapi.applications.FastAPI at 0x7fa2d0241c90>,\n",
+              " 'http://127.0.0.1:7863/',\n",
+              " 'https://30846.gradio.app')"
             ]
           },
           "metadata": {},
-          "execution_count": 96
+          "execution_count": 8
         }
       ]
     },
@@ -1786,7 +1786,16 @@
         "        [4, \"divide\", 2],\n",
         "        [-4, \"multiply\", 2.5],\n",
         "        [0, \"subtract\", 1.2],\n",
-        "    ],examples_per_page=2, ###얘 했는데도 왜 ㅋ🎯🎯🎯🎯🎯🎯\n",
+        "                [5, \"add\", 3],\n",
+        "        [4, \"divide\", 2],\n",
+        "        [-4, \"multiply\", 2.5],\n",
+        "        [0, \"subtract\", 1.2],\n",
+        "                [5, \"add\", 3],\n",
+        "        [4, \"divide\", 2],\n",
+        "        [-4, \"multiply\", 2.5],\n",
+        "        [0, \"subtract\", 1.2],\n",
+        "                [5, \"add\", 3]\n",
+        "    ],examples_per_page=1, ###얘 했는데도 왜 ㅋ🎯🎯🎯🎯🎯🎯\n",
         "    title=\"test calculator\",\n",
         "    description=\"heres a sample toy calculator. enjoy!\",\n",
         "    flagging_options=[\"this\", \"or\", \"that\"],\n",
@@ -1797,19 +1806,19 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 649
+          "height": 642
         },
         "id": "jqnmPXL83MTY",
-        "outputId": "c5dbdbf7-c5ea-4ac0-a1ca-4e1c6f9047c3"
+        "outputId": "7b93fdf1-c439-4afd-fc3a-6a2fef72fb2c"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
-            "Running on public URL: https://47624.gradio.app\n",
+            "Running on public URL: https://45835.gradio.app\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting, check out Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -1822,14 +1831,14 @@
               "        <iframe\n",
               "            width=\"900\"\n",
               "            height=\"500\"\n",
-              "            src=\"https://47624.gradio.app\"\n",
+              "            src=\"https://45835.gradio.app\"\n",
               "            frameborder=\"0\"\n",
               "            allowfullscreen\n",
               "        ></iframe>\n",
               "        "
             ],
             "text/plain": [
-              "<IPython.lib.display.IFrame at 0x7feaa5592210>"
+              "<IPython.lib.display.IFrame at 0x7fa2c6546110>"
             ]
           },
           "metadata": {}
@@ -1838,13 +1847,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(<fastapi.applications.FastAPI at 0x7fead333d9d0>,\n",
-              " 'http://127.0.0.1:7906/',\n",
-              " 'https://47624.gradio.app')"
+              "(<fastapi.applications.FastAPI at 0x7fa2d0241c90>,\n",
+              " 'http://127.0.0.1:7866/',\n",
+              " 'https://45835.gradio.app')"
             ]
           },
           "metadata": {},
-          "execution_count": 102
+          "execution_count": 11
         }
       ]
     },
@@ -5280,7 +5289,9 @@
         "- to make app accessible on local network, set this to \"0.0.0.0\". \n",
         "-Can be set by environment variable GRADIO_SERVER_NAME.\n",
         "\n",
-        "-server name=Hostname 라고도 하는데 그럼 민트 이런 것도!!?!!🎯🎯🎯🎯🎯 해보고 싶은데 떨려서 못 하겠음"
+        "-server name=Hostname 라고도 하는데 그럼 민트 이런 것도!!?!!🎯🎯🎯🎯🎯 해보고 싶은데 떨려서 못 하겠음\n",
+        "- ek다른 사람에게 할 때\n",
+        "- 캐슈넛에 절대 주소"
       ],
       "metadata": {
         "id": "Y091h5-hUgw0"
